--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ matrix:
     - os: osx
       osx_image: xcode10.2
       language: node_js
-      node_js: "10"
+      node_js: '10'
       env:
         - ELECTRON_CACHE=$HOME/.cache/electron
         - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
     - os: linux
-      services: docker
-      language: generic
+      language: node_js
+      node_js: '10'
 
 cache:
   directories:
@@ -18,18 +18,20 @@ cache:
     - $HOME/.cache/electron
     - $HOME/.cache/electron-builder
 
+install:
+  - yarn
 script:
   - |
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-      yarn && yarn dist --linux
+      yarn dist --linux
     fi
   - |
     if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-      yarn && yarn dist --mac
+      yarn dist --mac
     fi
   - |
     if [ "$TRAVIS_OS_NAME" == "windows" ]; then
-      yarn && yarn dist --windows
+      yarn dist --windows
     fi
 before_cache:
   - rm -rf $HOME/.cache/electron-builder/wine
